--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "박채원"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Neo한 C언어를 해봅시다"
+  bio              : "Neo한 C언어 Technology"
   location         : "분당 지박령"
   email            : "artpcw5883@gmail.com"
   links:
