--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "aqua" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Neo한 C언어 블로그"
+title                    : "𝓝𝓮𝓸 𝓒 𝓛𝓪𝓷𝓰𝓾𝓪𝓰𝓮 𝓣𝓮𝓬𝓱𝓷𝓸𝓵𝓸𝓰𝔂"
 title_separator          : "-"
 subtitle                 : "환영합니다!" # site tagline that appears below site title in masthead
 name                     : " 박채원! "
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "박채원"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Neo한 C언어 Technology"
+  bio              : "일개 학생"
   location         : "분당 지박령"
   email            : "artpcw5883@gmail.com"
   links:
