--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "박채원"
-  avatar           : /assets/images/unnamed (1).jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/Isabelle.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "일개 학생🥱🧐"
   location         : "분당 지박령"
   email            : "artpcw5883@gmail.com"
