--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ analytics:
 author:
   name             : "박채원"
   avatar           : /assets/images/Isabelle.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "일개 학생🥱🧐"
-  location         : "분당 지박령"
+  bio              : "일개 학생 ~ ᕕ( ᐛ )ᕗ"
+  location         : "(･´з`･)ゞ 분당 지박령"
   email            : "artpcw5883@gmail.com"
   links:
     - label: "Email"
