--- a/_config.yml
+++ b/_config.yml
@@ -280,3 +280,6 @@ defaults:
       comments:  true
       share: true
       related: true
+      toc: true
+      toc_sticky: true
+      toc_label: "페이지 주요 목차"
