--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "pink" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "🌠𝓒 𝓛𝓪𝓷𝓰𝓾𝓪𝓰𝓮 𝓣𝓮𝓬𝓱𝓷𝓸𝓵𝓸𝓰𝔂🌠"
+title                    : "💟𝓒 𝓛𝓪𝓷𝓰𝓾𝓪𝓰𝓮 𝓣𝓮𝓬𝓱𝓷𝓸𝓵𝓸𝓰𝔂💟"
 title_separator          : "-"
 subtitle                 : "𝒲ℯ𝓁𝒸ℴ𝓂ℯ 𝓉ℴ 𝓂𝓎 ℬ𝓁ℴℊ💕" # site tagline that appears below site title in masthead
 name                     : " 박채원! "
@@ -25,7 +25,7 @@ url                      : "https://artpcw5883.github.io" # the base hostname & 
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/pngjoy.com_care-bear-care-bears-star-bear-png-download_1069603.png
+logo                     : /assets/images/PngItem_2363429.png
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
