--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,11 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
+  - title: "Categories"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "연도"
+    url:
+  - title: "소개"
+    url: 
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
